<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.example.vinilos.viewmodels.AlbumCommentViewModel" />
        <variable name="albums" type="com.example.vinilos.models.Albums"/>
    </data>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.vinilos.ui.CreateAlbumFragment"
            >

        <LinearLayout
            tools:context=".ui.AlbumDetailFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:background="@drawable/background"
            android:scaleType = "centerCrop">

            <ImageView
                android:id="@+id/albums_cover"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                app:imageUrl="@{viewModel.album.cover}"
                tools:src="@tools:sample/backgrounds/scenic"/>

            <TextView
                android:id="@+id/album_name_comment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.album.name}"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="Album: 1" />

            <RatingBar
                android:id="@+id/album_comment_rating_bar"
                style="?attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:stepSize="0.5"

                />

            <EditText
                android:id="@+id/albumCommentEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />


            <Button
                android:id="@+id/album_comment_form_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:text="@string/add_comment" />

        </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>