...
            android:text="@{viewModel.album.name}"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:text="Album: 1" />

        <Button
            android:id="@+id/album_addcomment_form_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_comment" />

        <TextView
            android:id="@+id/album_releasedate_text"
...
