<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vinilos.navigation.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:background="@drawable/background"
        android:scaleType = "centerCrop">

        <TextView
            android:id="@+id/name_text"
            style="@style/SubtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/albums"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/albumsListButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/albums"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/musicians_text"
            style="@style/SubtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/musicians"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/musicianListButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/musicians"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/bands_text"
            style="@style/SubtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bands"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/bandListButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/bands"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/prizes_text"
            style="@style/SubtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prizes"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/prizesList"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/prizes"
            android:textAlignment="center" />

    </LinearLayout>
</layout>