<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".ui.PrizeFragment">

    <Button
        android:id="@+id/album_form_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_album" />

    <TextView
        android:id="@+id/name_text"
        style="@style/SubtitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_albums"
        android:textAlignment="textStart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/albums_item"/>

</LinearLayout>