...
                android:id="@+id/artistalbumsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/artist_album_item"/>

            <Button
                android:id="@+id/associateAlbumButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
...
