<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CreatePrizeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="#A4A4A4"
        android:paddingTop="10dp"
        android:text="Nombre"/>

    <EditText
        android:id="@+id/awardNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="#A4A4A4"
        android:paddingTop="10dp"
        android:text="Organización"/>
    <EditText
        android:id="@+id/awardOrganizationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="#A4A4A4"
        android:paddingTop="10dp"
        android:text="Descripción"/>

    <EditText
        android:id="@+id/awardDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/create_prize_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_prize" />

</LinearLayout>
