<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".ui.PrizeFragment">

    <Button
        android:id="@+id/prize_form_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_prize" />

    <TextView
        android:id="@+id/txt_no_prizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_no_prizes"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/prizesRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/prize_item">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>